- Fixed: Wrong handling of carriage returns ('\r') in the console window				TODO: also fix for the command log and other places
- Fixed: Spinboxes had wrong initial values
- Omit comments on missing function calls in dialog code windows (e.g., if prepare() is unused, there's no "## Prepare" in the output either)
- Output markup is now more XHTML compliant and easier to parse
- Also save cursor position, folding, etc. for scripts. Note: Implementation details may be subject to change.
- New function rk.list.labels() to retrieve column labels in a data.frame
- rk.get.label() will now return an empty string ("") instead of NULL, in case no label is assigned
- Fixed: Changed configuration settings would not be saved for script editor
- Fixed: One character missing in R commands on lines longer than 4096 characters
- Fixed: "Next"-button in wizards would remain enabled while settings are missing on a page
- Fixed: Dynamic pages in a wizard would cause a layout bug on the first page
- Do not offer to restore individual removed columns of a data.frame opened for editing
- Fixed: Plot history and graphical menus broken in some cases with R 2.15.0
- Fixed: If the rkward package was loaded in a plain R session, q() and quit() still work
- combined all Wilcoxon/Mann-Whitney-tests in one plugin (from previously two separate plugins)			TODO: adjust test(s)
- Added polyserial/polychoric correlations to correlation matrix plugin			TODO: adjust test(s)
- Added more compression options to the "Save objects as R code" plugin
- Added MacPorts support, see README.MacPorts and bundle build script in the macports folder
- Added dynamically generated table-of-contents menu to output document
- Fixed: Would not show output of system() commands to stderr on the console (on Unix-like systems)
- Allow some markup inside <text> elements in plugins, and auto-add breaks only for duplicate newlines.
- Reorganized t-test plugin, and add support for single sample t-tests